Convert site to static site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<html>
-  <script>
-    window.location = "https://wsw.yocubed.com/";
-  </script>
-</html>
+<script>
+    window.location = "/wheressomewater.github.io/home.html";
+</script>
