--- a/request.html
+++ b/request.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="/wheressomewater.github.io/home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active font-weight-bold" href="/wheressomewater.github.io/contact.html">Contact</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/wheressomewater.github.io/map.html">Map</a>
