Fixed static conversion typo

--- a/signup.html
+++ b/signup.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0030)https://wsw.yocubed.com/signup -->
 <html lang="en">
     <head>
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <title>Where's Some Water - Signup</title>
 
-        <link href="/wheressomewater.github.io/icon.pngn.png" rel="shortcut icon" type="image/x-icon">
-        <link href="/wheressomewater.github.io/bootstrap.min.cssn.css" rel="stylesheet">
-        <script src="/wheressomewater.github.io/jquery.min.jsin.js"></script>
+        <link href="/wheressomewater.github.io/icon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="/wheressomewater.github.io/bootstrap.min.css" rel="stylesheet">
+        <script src="/wheressomewater.github.io/jquery.min.js"></script>
         <style>
             body {
                 padding-top: 50px;
