--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,9 @@
         <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
         <title>Where's Some Water - Dashboard</title>
 
-        <link href="/wheressomewater.github.io/icon.pngn.png" rel="shortcut icon" type="image/x-icon">
-        <link href="/wheressomewater.github.io/bootstrap.min.cssn.css" rel="stylesheet">
-        <script src="/wheressomewater.github.io/jquery.min.jsin.js"></script>
+        <link href="/wheressomewater.github.io/icon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="/wheressomewater.github.io/bootstrap.min.css" rel="stylesheet">
+        <script src="/wheressomewater.github.io/jquery.min.js"></script>
         <style>
             body {
                 padding-top: 50px;
