Fixed static header

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,33 +16,36 @@
     <body class="container">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-                <a class="navbar-brand" href="/wheressomewater.github.io/home.html.html"><img src="/wheressomewater.github.io/WheresSomeWaterLarge.pnge.png" style="width: 150px"></a>
+                <a class="navbar-brand" href="/wheressomewater.github.io/home.html"><img src="/wheressomewater.github.io/WheresSomeWaterLarge.png" style="width: 150px"></a>
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/home.html.html">Home</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/contact.html.html">Contact</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/map.html.html">Map</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/map.html">Map</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/request.html.html">Request</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/request.html">Request</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/supply.html.html">Supply</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/supply.html">Supply</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/report.html.html">Report</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/report.html">Report</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/signup.html.html">Signup</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/wheressomewater.github.io/login.html.html">Login</a>
+                        <a class="nav-link" href="/wheressomewater.github.io/signup.html">Signup</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/wheressomewater.github.io/login.html">Login</a>
                     </li>
                 </ul>
                 <script>
