--- a/map.html
+++ b/map.html
@@ -39,6 +39,9 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link" href="/wheressomewater.github.io/dashboard.html">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/wheressomewater.github.io/signup.html">Signup</a>
                     </li>
                     <li class="nav-item">
