Fixed static conversion typos

--- a/forgot.html
+++ b/forgot.html
@@ -26,12 +26,12 @@
                     <br>
                     <input autofocus="" class="form-control" name="email" placeholder="john@smith.com" required="" type="email">
                     <br>
-                    <button class="btn btn-lg btn-primary btn-block" onclick="/forgot_submit.html" type="submit">
+                    <button class="btn btn-lg btn-primary btn-block" onclick="window.location = '/wheressomewater.github.io/forgot_submit.html'" type="submit">
                         Reset Password
                     </button>
                     <br>
                 </form>
-                <button class="btn btn-sm btn-secondary btn-block" onclick="window.location = '/login.html'">
+                <button class="btn btn-sm btn-secondary btn-block" onclick="window.location = '/wheressomewater.github.io/login.html'">
                     Remembered?
                 </button>
             </div>
