--- a/dashboard.html
+++ b/dashboard.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <img src="/wheressomewater.github.io/WaterMap.pngp.png" width="100%">
+                        <img src="/wheressomewater.github.io/WaterMap.png" width="100%">
                     </div>
                     <div class="col-sm">
                         <div class="card">
@@ -92,7 +92,7 @@
                     </div>
                     <div class="col-sm">
                         <div class="card-body">
-                            <img height="100px" src="/wheressomewater.github.io/user.pngr.png">
+                            <img height="100px" src="/wheressomewater.github.io/user.png">
                             <h5 class="card-title">Hello user!</h5>
                             <br>
                             <h6 class="card-subtitle mb-2">Resident of Town Name</h6>
